--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   location: ^4.4.0
 
+  animated_splash_screen: ^1.3.0
+  splashscreen: ^1.3.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -68,7 +71,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/interstate.jpg
-  #   - images/a_dot_ham.jpeg
+    - assets/images/yatla_bg.png
+    - assets/images/yatla.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
